--- a/css/style.css
+++ b/css/style.css
@@ -336,9 +336,9 @@ body {
 .controls-info {
     margin-top: 35px;
     background: rgba(30, 58, 138, 0.7);
-    padding: 18px;
+    padding: 12px 24px;
     border-radius: 15px;
-    max-width: 360px;
+    max-width: 600px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     border: 2px solid rgba(255, 215, 0, 0.3);
 }
